GPC/tests/examples/fail/wrongPointers3.gpc


void GPRM::Test::wrongPointers3(char *x) {
    
    char *y = x + 'h';

}
